change name vedios

--- a/vedios.html
+++ b/vedios.html
@@ -101,7 +101,7 @@
               Your browser does not support HTML5 video.
             </video>
             <div class="card-body">
-              <h5 class="card-title">Den Mark</h5>
+              <h5 class="card-title">فندق رمادا</h5>
             </div>
           </div>
           <div class="card">
@@ -110,7 +110,7 @@
               Your browser does not support HTML5 video.
             </video>
             <div class="card-body">
-              <h5 class="card-title">Leena jorj</h5>
+              <h5 class="card-title">حديقة الفاتح</h5>
             </div>
 
           </div>
@@ -120,7 +120,7 @@
               Your browser does not support HTML5 video.
             </video>
             <div class="card-body">
-              <h5 class="card-title">Magi Den</h5>
+              <h5 class="card-title">برج القصر</h5>
 
             </div>
 
