--- a/galary.html
+++ b/galary.html
@@ -2,6 +2,7 @@
 <html >
 
 <head>
+  <!-- edit galary -->
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
